# sfml-ogl-template

./: .gitignore  CMakeLists.txt  COPYING  Renderer.cpp  Renderer.h  main.cpp
